RESOLVED FIXED130513
[CSS Grid Layout] Vertical rectangles not considered as valid grid areas
https://bugs.webkit.org/show_bug.cgi?id=130513
Summary [CSS Grid Layout] Vertical rectangles not considered as valid grid areas
Sergio Villar Senin
Reported 2014-03-20 08:56:07 PDT
[CSS Grid Layout] Vertical rectangles not considered as valid grid areas
Attachments
Patch (6.80 KB, patch)
2014-03-20 09:04 PDT, Sergio Villar Senin
kling: review+
Sergio Villar Senin
Comment 1 2014-03-20 09:04:02 PDT
Sergio Villar Senin
Comment 2 2014-03-25 05:44:22 PDT
Note You need to log in before you can comment on or make changes to this bug.