[CSS Grid Layout] Vertical rectangles not considered as valid grid areas https://bugs.webkit.org/show_bug.cgi?id=130513

Reviewed by Andreas Kling.

Source/WebCore:

Grid areas sized as vertical rectangles were incorrectly
considered as invalid by the parser. That's because the condition
checking that each new row was adjacent to the previous one was
using the first row of the currently parsed grid area instead of
the last one.

Test: fast/css-grid-layout/grid-template-areas-get-set.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseGridTemplateAreas):

LayoutTests:

Added tests for grid areas sized as horizontal and vertical
rectangles. The tests were also renamed from grid-template to
grid-template-areas which better describe their nature.

* fast/css-grid-layout/grid-template-areas-get-set-expected.txt: Renamed from LayoutTests/fast/css-grid-layout/grid-template-get-set-expected.txt.
* fast/css-grid-layout/grid-template-areas-get-set.html: Renamed from LayoutTests/fast/css-grid-layout/grid-template-get-set.html.

Canonical link: https://commits.webkit.org/148753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166231 268f45cc-cd09-0410-ab3c-d52691b4dbfc